--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Responsive Table Generator</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'><rect width='64' height='64' fill='%23007ACC'/><rect x='8' y='8' width='16' height='16' fill='none' stroke='white' stroke-width='2'/><rect x='24' y='8' width='16' height='16' fill='none' stroke='white' stroke-width='2'/><rect x='40' y='8' width='16' height='16' fill='none' stroke='white' stroke-width='2'/><rect x='8' y='24' width='16' height='16' fill='none' stroke='white' stroke-width='2'/><rect x='24' y='24' width='16' height='16' fill='none' stroke='white' stroke-width='2'/><rect x='40' y='24' width='16' height='16' fill='none' stroke='white' stroke-width='2'/><rect x='8' y='40' width='16' height='16' fill='none' stroke='white' stroke-width='2'/><rect x='24' y='40' width='16' height='16' fill='none' stroke='white' stroke-width='2'/><rect x='40' y='40' width='16' height='16' fill='none' stroke='white' stroke-width='2'/></svg>">
     <script src="https://unpkg.com/mammoth/mammoth.browser.min.js"></script>
     <link
         href="https://fonts.googleapis.com/css2?family=Inter&family=Roboto&family=Open+Sans&family=Lato&family=Poppins&family=Ubuntu&family=Merriweather&family=Playfair+Display&family=Fira+Sans&family=Raleway&family=Quicksand&family=Noto+Sans&family=Source+Sans+Pro&display=swap"
@@ -653,11 +654,10 @@ body { font-family: ${font}; padding: 20px; }
   font-family: ${font};
   padding: 40px 10px 20px 10px;
   text-align: left;
-  width: calc(100% - 25px);
 }
 @media (max-width: 768px) {
   .responsive-table thead { display: none; }
-  .responsive-table, .responsive-table tbody, .responsive-table tr { display: block; width: 100%; }
+  .responsive-table, .responsive-table tbody, .responsive-table tr { display: block; }
   .responsive-table th, .responsive-table td { display: block; }
   .responsive-table tr {
     margin-bottom: 1rem;
@@ -665,8 +665,6 @@ body { font-family: ${font}; padding: 20px; }
     padding: 10px;
   }
   .responsive-table td {
-    text-align: right;
-    padding-left: 50%;
     position: relative;
   }
   .responsive-table td::before {
